// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Family F — cwd variants > F1 — resolves normally with Program Files (x86) cwd (win32) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/@mariozechner/pi-coding-agent/dist/cli.js
tried:
  override     no override set
  bare-import  cannot locate @earendil-works/pi-coding-agent package directory
  bare-import  cannot locate @mariozechner/pi-coding-agent package directory
  managed      missing: <HOME>/.pi-dashboard/node_modules/@earendil-works/pi-coding-agent/dist/cli.js
  managed      ok"
`;

exports[`Family F — cwd variants > F1 — resolves normally with spaces in cwd (linux) 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  bare-import  cannot locate @earendil-works/pi-coding-agent package directory
  bare-import  cannot locate @mariozechner/pi-coding-agent package directory
  managed      ok"
`;

exports[`Family F — cwd variants > F2 — resolves with Greek/Cyrillic/emoji in cwd 1`] = `
"name:   pi
ok:     true
source: managed
path:   <HOME>/.pi-dashboard/node_modules/.bin/pi
tried:
  override     no override set
  bare-import  cannot locate @earendil-works/pi-coding-agent package directory
  bare-import  cannot locate @mariozechner/pi-coding-agent package directory
  managed      ok"
`;
